# conf.py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/conf/: __init__.py
tests/: test_config.py
